@@ -30,13 +30,13 @@ $(CIFSMOUNT_DIR)/$(CIFSMOUNT_BINARY): $(CIFSMOUNT_DIR)/.unpacked
 	) 
 
 $(PACKAGES_DIR)/.cifsmount-$(CIFSMOUNT_VERSION): $(DL_DIR)/$(CIFSMOUNT_PKG_SOURCE)
-	@tar -C $(PACKAGES_DIR) --exclude .svn -xjf $(DL_DIR)/$(CIFSMOUNT_PKG_SOURCE)
+	@tar -C $(PACKAGES_DIR) -xjf $(DL_DIR)/$(CIFSMOUNT_PKG_SOURCE)
 	@touch $@
 
 cifsmount: $(PACKAGES_DIR)/.cifsmount-$(CIFSMOUNT_VERSION)
 
 cifsmount-package: $(PACKAGES_DIR)/.cifsmount-$(CIFSMOUNT_VERSION)
-	tar -C $(PACKAGES_DIR) $(VERBOSE) -cjf $(PACKAGES_BUILD_DIR)/$(CIFSMOUNT_PKG_SOURCE) cifsmount-$(CIFSMOUNT_VERSION)
+	tar -C $(PACKAGES_DIR) $(VERBOSE) --exclude .svn -cjf $(PACKAGES_BUILD_DIR)/$(CIFSMOUNT_PKG_SOURCE) cifsmount-$(CIFSMOUNT_VERSION)
 
 cifsmount-precompiled: $(CIFSMOUNT_DIR)/$(CIFSMOUNT_BINARY) cifsmount
 	$(TARGET_STRIP) $(CIFSMOUNT_DIR)/$(CIFSMOUNT_BINARY)
