@@ -56,13 +56,13 @@ $(DECO_DIR)/$(DECO_TARGET_BINARY): $(DECO_DIR)/.configured
 	PATH="$(TARGET_PATH)" $(MAKE) -C $(DECO_DIR)
 
 $(PACKAGES_DIR)/.deco-$(DECO_VERSION): $(DL_DIR)/$(DECO_PKG_SOURCE)
-	@tar -C $(PACKAGES_DIR) --exclude .svn -xjf $(DL_DIR)/$(DECO_PKG_SOURCE)
+	@tar -C $(PACKAGES_DIR) -xjf $(DL_DIR)/$(DECO_PKG_SOURCE)
 	@touch $@
 
 deco: $(PACKAGES_DIR)/.deco-$(DECO_VERSION)
 
 deco-package: $(PACKAGES_DIR)/.deco-$(DECO_VERSION)
-	tar -C $(PACKAGES_DIR) $(VERBOSE) -cjf $(PACKAGES_BUILD_DIR)/$(DECO_PKG_SOURCE) deco-$(DECO_VERSION)
+	tar -C $(PACKAGES_DIR) $(VERBOSE) --exclude .svn -cjf $(PACKAGES_BUILD_DIR)/$(DECO_PKG_SOURCE) deco-$(DECO_VERSION)
 
 deco-precompiled: $(DECO_DIR)/$(DECO_TARGET_BINARY) deco
 	$(TARGET_STRIP) $(DECO_DIR)/$(DECO_TARGET_BINARY)
